test/error/ast/ImportLoopA.mod
MODULE ImportLoopA;
IMPORT ImportLoopB;
END ImportLoopA.
